--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,18 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>jQuery Idletimeout</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script src="src/jquery.idletimer.js" type="text/javascript"></script>
 <script src="src/jquery.idletimeout.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+$.idleTimeout({
+	idleAfter: 5,
+	interval: 1,
+	keepAliveURL: 'keepalive.php',
+	serverResponseEquals: 'OK'
+});
+</script>
 
 <style type="text/css">
 html, body { margin:0; padding:0; }
@@ -38,7 +47,9 @@ html, body { margin:0; padding:0; }
 
 <div id="content">
 <h2>jQuery Idle Timeout</h2>
-<p>This idle timeout countdown is triggered after 2 seconds.  Keep your mouse and keyboard still!</p>
+<p>This idle timeout countdown is triggered after 5 seconds.  Keep your mouse and keyboard still!</p>
+<p>A polling request is sent to the server every second to keep the server side session alive.  I've set it to one second 
+for demo purposes (timeout is only 5 seconds), but in reality, this should be much higher.</p>
 <p>View source to see markup &amp; CSS.</p>
 <a href="http://www.erichynds.com/blog/?p=66">&laquo; Return to Blog Post</a>
 </div>
