--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,6 @@
 <script src="src/jquery.idletimeout.js" type="text/javascript"></script>
 
 <script type="text/javascript">
-
 // note, you don't need to wait for document.ready()
 $.idleTimeout({
 	idleAfter: 5,
@@ -43,7 +42,7 @@ html, body { margin:0; padding:0; }
 <body>
 
 <div id="idletimeout">
-	You will be logged off in <span id="idletimeout-countdown"><!-- countdown place holder --></span>&nbsp;seconds due to inactivity. 
+	You will be logged off in <span><!-- countdown place holder --></span>&nbsp;seconds due to inactivity. 
 	<a id="idletimeout-resume" href="#" style="color:#fff; font-weight:bold;">Click here to continue using this web page</a>.
 </div>
 
