--- a/index.htm
+++ b/index.htm
@@ -8,10 +8,10 @@
 <script src="src/jquery.idletimeout.js" type="text/javascript"></script>
 
 <script type="text/javascript">
-// note, you don't need to wait for document.ready()
+// note, don't wait for document.ready() - we want to detect idle state ASAP
 $.idleTimeout({
 	idleAfter: 5,
-	interval: 1,
+	pollingInterval: 1,
 	keepAliveURL: 'keepalive.php',
 	serverResponseEquals: 'OK'
 });
