--- a/example-mint.htm
+++ b/example-mint.htm
@@ -33,25 +33,26 @@ html, body { margin:0; padding:0; }
 <script src="src/jquery.idletimeout.js" type="text/javascript"></script>
 
 <script type="text/javascript">
-// note, don't wait for document.ready() - we want to detect idle state ASAP
-$.idleTimeout('#idletimeout', '#idletimeout a', {
-	idleAfter: 5,
-	pollingInterval: 1,
-	keepAliveURL: 'keepalive.php',
-	serverResponseEquals: 'OK',
-	onTimeout: function(){
-		$(this).slideUp();
-		window.location = "timeout.htm";
-	},
-	onIdle: function(){
-		$(this).slideDown(); // show the warning bar
-	},
-	onCountdown: function(counter){
-		$(this).find("span").html(counter); // update the counter
-	},
-	onResume: function(){
-		$(this).slideUp(); // hide the warning bar
-	}
+$(function(){
+	$.idleTimeout('#idletimeout', '#idletimeout a', {
+		idleAfter: 5,
+		pollingInterval: 1,
+		keepAliveURL: 'keepalive.php',
+		serverResponseEquals: 'OK',
+		onTimeout: function(){
+			$(this).slideUp();
+			window.location = "timeout.htm";
+		},
+		onIdle: function(){
+			$(this).slideDown(); // show the warning bar
+		},
+		onCountdown: function(counter){
+			$(this).find("span").html(counter); // update the counter
+		},
+		onResume: function(){
+			$(this).slideUp(); // hide the warning bar
+		}
+	});
 });
 </script>
 
