better examples; small bug fixes

--- a/example-mint.htm
+++ b/example-mint.htm
@@ -5,29 +5,12 @@
 <title>jQuery Idle Timeout</title>
 
 <style type="text/css">
-html, body { margin:0; padding:0; }
-#content { padding:10px; }
-
-#idletimeout {
-	background:#CC5100;
-	border:3px solid #FF6500;
-	color:#fff;
-	font-family:arial, sans-serif;
-	text-align:center;
-	font-size:12px;
-	padding:10px;
-	position:relative;
-	top:0px; 
-	left:0; 
-	right:0; 
-	z-index:100000; 
-	display:none; 
-}
-
+#idletimeout { background:#CC5100; border:3px solid #FF6500; color:#fff; font-family:arial, sans-serif; text-align:center; font-size:12px; padding:10px; position:relative; top:0px; left:0; right:0; z-index:100000; display:none; }
 #idletimeout a { color:#fff; font-weight:bold }
 #idletimeout span { font-weight:bold }
 </style>
 
+<link rel="stylesheet" type="text/css" href="examples.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 <script src="src/jquery.idletimer.js" type="text/javascript"></script>
 <script src="src/jquery.idletimeout.js" type="text/javascript"></script>
