--- a/example-dialog.htm
+++ b/example-dialog.htm
@@ -3,12 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>jQuery Idle Timeout</title>
-
-<style type="text/css">
-html, body { margin:0; padding:0; }
-#content { padding:10px; }
-</style>
-
+<link href="examples.css" rel="stylesheet" type="text/css" />
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
@@ -21,9 +16,17 @@ $(function(){
 	$("#dialog").dialog({
 		autoOpen: false,
 		modal: true,
+		width: 400,
+		height: 200,
+		title: 'Your session is about to expire!',
 		buttons: {
 			'Yes, Keep Working': function(){
 				$(this).dialog('close');
+			},
+			'No, Logoff': function(){
+				// fire whatever the configured onTimeout callback is.
+				// using .call(this) keeps the default behavior of "this" being the warning element (dialog in this case) inside the callback.
+				$.idleTimeout.options.onTimeout.call(this);
 			}
 		}
 	});
@@ -38,7 +41,6 @@ $(function(){
 		},
 		onIdle: function(){
 			$(this).dialog("open");
-			console.log( $(this), $("div.ui-dialog-buttonpane button") );
 		},
 		onCountdown: function(counter){
 			$("#dialog-countdown").html(counter); // update the counter
@@ -55,9 +57,11 @@ $(function(){
 
 <div id="dialog">
 	<p>
-		<span class="ui-icon ui-icon-circle-check" style="float:left; margin:0 7px 50px 0;"></span>
-		You will be logged off in <span id="dialog-countdown"></span> seconds.  Do you want to continue your session?
+		<span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 50px 0;"></span>
+		You will be logged off in <span id="dialog-countdown" style="font-weight:bold"></span> seconds.
 	</p>
+	
+	<p>Do you want to continue your session?</p>
 </div>
 
 <div id="content">
