set some ui dialog options

--- a/example-dialog.htm
+++ b/example-dialog.htm
@@ -18,6 +18,9 @@ $(function(){
 		width: 400,
 		height: 200,
 		title: 'Your session is about to expire!',
+		closeOnEscape: false,
+		draggable: false,
+		resizable: false,
 		buttons: {
 			'Yes, Keep Working': function(){
 				$(this).dialog('close');
