updated example links

--- a/example-mint.htm
+++ b/example-mint.htm
@@ -64,8 +64,8 @@ $(function(){
 	
 	<ul>
 	<li><a href="example-dialog.htm">View the jQuery UI dialog example</a></li>
-	<li><a href="http://www.erichynds.com/blog/?p=66">Return to Blog Post</a></li>
-	<li><a href="http://www.erichynds.com">Return to Home Page</a>
+	<li><a href="http://github.com/ehynds/jquery-idle-timeout">Download &amp; follow on GitHub</a></li>
+	<li><a href="http://www.erichynds.com">Return to home page</a>
 	</ul>
 </div>
 
