--- a/example-dialog.htm
+++ b/example-dialog.htm
@@ -4,65 +4,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>jQuery Idle Timeout</title>
 <link href="examples.css" rel="stylesheet" type="text/css" />
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript"></script>
-<script src="src/jquery.idletimer.js" type="text/javascript"></script>
-<script src="src/jquery.idletimeout.js" type="text/javascript"></script>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" />
 
-<script type="text/javascript">
-$(function(){
-	$("#dialog").dialog({
-		autoOpen: false,
-		modal: true,
-		width: 400,
-		height: 200,
-		title: 'Your session is about to expire!',
-		closeOnEscape: false,
-		draggable: false,
-		resizable: false,
-		buttons: {
-			'Yes, Keep Working': function(){
-				$(this).dialog('close');
-			},
-			'No, Logoff': function(){
-				// fire whatever the configured onTimeout callback is.
-				// using .call(this) keeps the default behavior of "this" being the warning element (dialog in this case) inside the callback.
-				$.idleTimeout.options.onTimeout.call(this);
-				$(this).dialog('close');
-			}
-		}
-	});
-	
-	$.idleTimeout('#dialog', 'div.ui-dialog-buttonpane button', {
-		idleAfter: 5,
-		pollingInterval: 1,
-		keepAliveURL: 'keepalive.php',
-		serverResponseEquals: 'OK',
-		onTimeout: function(){
-			window.location = "timeout.htm";
-		},
-		onIdle: function(){
-			$(this).dialog("open");
-		},
-		onCountdown: function(counter){
-			$("#dialog-countdown").html(counter); // update the counter
-		},
-		onResume: function(){
-			// the dialog closes.  nothing else need be done
-		}
-	});
-});
-</script>
+<!-- we want to force people to click a button, so hide the close link in the toolbar -->
+<style type="text/css">a.ui-dialog-titlebar-close { display:none }</style>
 </head>
-
 <body>
 
 <div id="bar">
 	<h1><a href="http://www.erichynds.com">eric<span>hynds</span></a></h1>
 </div>
 
-<div id="dialog">
+<!-- dialog window markup -->
+<div id="dialog" title="Your session is about to expire!">
 	<p>
 		<span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 50px 0;"></span>
 		You will be logged off in <span id="dialog-countdown" style="font-weight:bold"></span> seconds.
@@ -85,6 +39,56 @@ $(function(){
 	</ul>
 </div>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js" type="text/javascript"></script>
+<script src="src/jquery.idletimer.js" type="text/javascript"></script>
+<script src="src/jquery.idletimeout.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+// setup the dialog
+$("#dialog").dialog({
+	autoOpen: false,
+	modal: true,
+	width: 400,
+	height: 200,
+	closeOnEscape: false,
+	draggable: false,
+	resizable: false,
+	buttons: {
+		'Yes, Keep Working': function(){
+			$(this).dialog('close');
+		},
+		'No, Logoff': function(){
+			// fire whatever the configured onTimeout callback is.
+			// using .call(this) keeps the default behavior of "this" being the warning element (the dialog in this case) inside the callback.
+			$.idleTimeout.options.onTimeout.call(this);
+		}
+	}
+});
+
+// cache a reference to the countdown element so we don't have to query the DOM for it each second.
+var $countdown = $("#dialog-countdown");
+
+// start the idle timer plugin
+$.idleTimeout('#dialog', 'div.ui-dialog-buttonpane button', {
+	idleAfter: 5,
+	pollingInterval: 1,
+	keepAliveURL: 'keepalive.php',
+	serverResponseEquals: 'OK',
+	onTimeout: function(){
+		window.location = "timeout.htm";
+	},
+	onIdle: function(){
+		$(this).dialog("open");
+	},
+	onCountdown: function(counter){
+		$countdown.html(counter); // update the counter
+	},
+	onResume: function(){
+		// the dialog closes.  nothing else needs to be done
+	}
+});
+</script>
 
 </body>
 </html>
