--- a/example-mint.htm
+++ b/example-mint.htm
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>jQuery Idle Timeout</title>
 
 <style type="text/css">
@@ -11,38 +10,8 @@
 </style>
 
 <link rel="stylesheet" type="text/css" href="examples.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
-<script src="src/jquery.idletimer.js" type="text/javascript"></script>
-<script src="src/jquery.idletimeout.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-$(function(){
-	$.idleTimeout('#idletimeout', '#idletimeout a', {
-		idleAfter: 5,
-		pollingInterval: 2,
-		keepAliveURL: 'keepalive.php',
-		serverResponseEquals: 'OK',
-		onTimeout: function(){
-			$(this).slideUp();
-			window.location = "timeout.htm";
-		},
-		onIdle: function(){
-			$(this).slideDown(); // show the warning bar
-		},
-		onCountdown: function(counter){
-			$(this).find("span").html(counter); // update the counter
-		},
-		onResume: function(){
-			$(this).slideUp(); // hide the warning bar
-		}
-	});
-});
-</script>
-
 </head>
-
 <body>
-
 
 <div id="idletimeout">
 	You will be logged off in <span><!-- countdown place holder --></span>&nbsp;seconds due to inactivity. 
@@ -69,7 +38,30 @@ $(function(){
 	</ul>
 </div>
 
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js" type="text/javascript"></script>
+<script src="src/jquery.idletimer.js" type="text/javascript"></script>
+<script src="src/jquery.idletimeout.js" type="text/javascript"></script>
+<script type="text/javascript">
+$.idleTimeout('#idletimeout', '#idletimeout a', {
+	idleAfter: 5,
+	pollingInterval: 2,
+	keepAliveURL: 'keepalive.php',
+	serverResponseEquals: 'OK',
+	onTimeout: function(){
+		$(this).slideUp();
+		window.location = "timeout.htm";
+	},
+	onIdle: function(){
+		$(this).slideDown(); // show the warning bar
+	},
+	onCountdown: function( counter ){
+		$(this).find("span").html( counter ); // update the counter
+	},
+	onResume: function(){
+		$(this).slideUp(); // hide the warning bar
+	}
+});
+</script>
 </body>
 </html>
 
